--- a/src/BackEndBundle/Resources/config/routing.yml
+++ b/src/BackEndBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 back_end_homepage:
-    path:     /
-    defaults: { _controller: BackEndBundle:Product:index }
+    path:     /product/list
+    defaults: { _controller: BackEndBundle:Product:list }
