Add category entity

--- a/src/BackEndBundle/Resources/config/doctrine/Product.orm.yml
+++ b/src/BackEndBundle/Resources/config/doctrine/Product.orm.yml
@@ -19,4 +19,11 @@ BackEndBundle\Entity\Product:
         description:
             type: text
             nullable: true
+    manyToOne:
+        category:
+            targetEntity: BackEndBundle\Entity\Category
+            inversedBy: products
+            joinColumn:
+                name: category_id
+                referencedColumnName: id
     lifecycleCallbacks: {  }
