Rempve sqlite db path from config; new and list users actions

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -29,4 +29,4 @@ security:
     access_control:
         - { path: /god/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /god/user, roles: ROLE_ADMIN }
-        - { path: /.*, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: /god, roles: ROLE_USER }
