--- a/src/BackEndBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/BackEndBundle/Resources/config/doctrine/User.orm.yml
@@ -1,6 +1,6 @@
 BackEndBundle\Entity\User:
     type: entity
-    table: null
+    table: users
     repositoryClass: BackEndBundle\Repository\UserRepository
     id:
         id:
