--- a/src/FrontEndBundle/Resources/config/routing.yml
+++ b/src/FrontEndBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 front_end_homepage:
     path:     /
-    defaults: { _controller: FrontEndBundle:Default:index }
+    defaults: { _controller: FrontEndBundle:FrontEnd:index }
