Add product rating; Fix sorting in backoffice

--- a/src/BackEndBundle/Resources/config/doctrine/Product.orm.yml
+++ b/src/BackEndBundle/Resources/config/doctrine/Product.orm.yml
@@ -22,6 +22,9 @@ BackEndBundle\Entity\Product:
         image_url:
             type: text
             nullable: true
+        rating:
+            type: integer
+            nullable: true
     manyToOne:
         category:
             targetEntity: BackEndBundle\Entity\Category
