--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -17,3 +17,6 @@ services:
         arguments: ["@service_container"]
         tags:
             - { name: twig.extension }
+
+    product_crawler:
+        class: BackEndBundle\Utils\ProductCrawler\ProductCrawler
