--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,9 @@
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
-        "knplabs/knp-paginator-bundle": "^2.5"
+        "knplabs/knp-paginator-bundle": "^2.5",
+        "symfony/dom-crawler": "^3.0",
+        "symfony/css-selector": "^3.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
