Set category for crawled product; Add more categories

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -20,3 +20,4 @@ services:
 
     product_crawler:
         class: BackEndBundle\Utils\ProductCrawler\ProductCrawler
+        arguments: ["@doctrine.orm.default_entity_manager"]
