--- a/src/BackEndBundle/Resources/config/routing.yml
+++ b/src/BackEndBundle/Resources/config/routing.yml
@@ -8,6 +8,10 @@ login_check:
 logout:
     path:     /logout
 
+back_end_home:
+    path: /
+    defaults: { _controller: BackEndBundle:Product:list }
+
 back_end_product_list:
     path:     /product/list
     defaults: { _controller: BackEndBundle:Product:list }
