--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bootstrap": "^3.3.6",
     "mustache.js": "mustache#^2.2.1",
-    "jquery-query-object": "^2.2.3"
+    "jquery-query-object": "^2.2.3",
+    "bootstrap-material-design": "^0.5.9"
   }
 }
