--- a/src/FrontEndBundle/Resources/config/services.yml
+++ b/src/FrontEndBundle/Resources/config/services.yml
@@ -2,3 +2,7 @@ services:
 #    front_end.example:
 #        class: FrontEndBundle\Example
 #        arguments: [@service_id, "plain_value", %parameter%]
+    twig.extension.text:
+        class: Twig_Extensions_Extension_Text
+        tags:
+            - { name: twig.extension }
