--- a/src/FrontEndBundle/Resources/config/routing.yml
+++ b/src/FrontEndBundle/Resources/config/routing.yml
@@ -25,3 +25,7 @@ front_end_cart_get:
 front_end_checkout_cart_page:
     path: /checkout/cart
     defaults: { _controller: FrontEndBundle:Checkout:cartPage }
+
+front_end_checkout_order_info_page:
+    path: /checkout/order-info
+    defaults: { _controller: FrontEndBundle:Checkout:orderInfoPage }
