Order, OrderItem and Order info entities to have complete information about order

--- a/src/BackEndBundle/Resources/config/doctrine/OrderInfo.orm.yml
+++ b/src/BackEndBundle/Resources/config/doctrine/OrderInfo.orm.yml
@@ -30,3 +30,7 @@ BackEndBundle\Entity\OrderInfo:
         phone_number:
             type: string
             length: 255
+    oneToOne:
+        order:
+            targetEntity: Order
+            inversedBy: orderInfo
