Add status field to order

--- a/src/BackEndBundle/Resources/config/doctrine/Order.orm.yml
+++ b/src/BackEndBundle/Resources/config/doctrine/Order.orm.yml
@@ -8,6 +8,10 @@ BackEndBundle\Entity\Order:
             id: true
             generator:
                 strategy: AUTO
+    fields:
+        status:
+            type: string
+            length: 255
     oneToOne:
         orderInfo:
             targetEntity: BackEndBundle\Entity\OrderInfo
